--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>V1</title>
@@ -7,8 +8,20 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" type="text/css" href="assets/jquery-datatables/css/jquery.dataTables.min.css">
+  <script src="assets/jquery-datatables/scripts/jquery-1.12.4.js"></script>
+  <script src="assets/jquery-datatables/scripts/jquery.dataTables.min.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('#example').DataTable();
+    });
+  </script>
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+  <app-root> Loading...</app-root>
 </body>
+
 </html>
