--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,22 @@
 
   <script>
     $(document).ready(function () {
-      $('#example').DataTable();
+      $('#example').DataTable({
+        "processing": true,
+        "serverSide": true,
+        "ajax": {
+          "url": "/api/post.php",
+          "type": "POST"
+        },
+        "columns": [
+          { "data": "first_name" },
+          { "data": "last_name" },
+          { "data": "position" },
+          { "data": "office" },
+          { "data": "start_date" },
+          { "data": "salary" }
+        ]
+      });
     });
   </script>
 </head>
